--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.main-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 3fr 2fr 1fr;
+  column-gap: 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.candidate-container {
+  height: auto;
+  background-color: red;
+  border: 5px solid black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.candidate-img {
+  max-width: 100%;
+  height: 400px;
+  padding: 5px; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.candidate-info {
+  padding: 20px 0px 0px 20px;
 }
 
-.card {
-  padding: 2em;
+.vote-btn-container {
+  padding: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.vote-btn {
+  width: 300px;
 }
