--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,39 @@
+/* Unauthenticated Page */
+.unauth-main-container {
+  height: 60vh;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
+.login-btn {
+  height: 4rem;
+  width: 10rem;
+}
+
+/* Logged in Page */
 .main-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 3fr 2fr 1fr;
+  grid-template-rows: 500px 200px 50px;
   column-gap: 10px;
+  padding-top: 15%;
 }
 
 .candidate-container {
   height: auto;
-  background-color: red;
-  border: 5px solid black;
+  /* background-color: red; */
+  /* border: 2px solid black; */
+}
+
+.candidate-img-div {
+  display: flex;
+  justify-content: center;
+}
+
+.candidate-checkbox {
+  height: 25px;
+  width: 25px;
 }
 
 .candidate-img {
@@ -17,12 +42,24 @@
   padding: 5px; 
 }
 
+.candidate-name-txt {
+  font-size: auto;
+  padding: 0px;
+  margin: 0px;
+}
+
 .candidate-info {
   padding: 20px 0px 0px 20px;
+  display: grid;
+grid-template-columns: repeat(2, 1fr);
 }
 
 .vote-btn-container {
   padding: 20px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: grid;
+  justify-items: center;
 }
 
 .vote-btn {
